--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": "8"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase-admin": "^8.0.0",
