config with environment and init db

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "did-i-tell-you",
   "description": "Backend in express js to remember at wich person I have tell this anecdote",
   "scripts": {
-    "start": "npm run shell"
+    "start": "node index.js",
+    "start-prod": "node index.js prod",
+    "start-test": "node index.js test"
   },
   "engines": {
     "node": "8"
