--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
     "sequelize": "^5.21.1",
-    "sqlite3": "^4.1.0"
+    "sqlite3": "4.1.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
