--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start": "node index.js",
     "start-prod": "node index.js prod",
-    "start-test": "node index.js test"
+    "start-test": "node index.js test",
+    "test": "mocha --timeout 10000"
   },
   "engines": {
     "node": "8"
@@ -21,7 +22,10 @@
     "sqlite3": "4.1.1"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.1.6"
+    "firebase-functions-test": "^0.1.6",
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "mocha": "^2.4.5"
   },
   "private": true
 }
