--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "start": "node index.js",
     "start-prod": "node index.js prod",
     "start-test": "node index.js test",
-    "test": "mocha --timeout 10000"
+    "test": "mocha ./test/sample.test.js"
   },
   "engines": {
     "node": "8"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "concurrently": "^5.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase-admin": "^8.0.0",
@@ -22,9 +23,9 @@
     "sqlite3": "4.1.1"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.1.6",
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
+    "firebase-functions-test": "^0.1.6",
     "mocha": "^2.4.5"
   },
   "private": true
