--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
     "sequelize": "^5.21.1",
