--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^5.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.3.1",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
